--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       <h1><span>On Your First <BR>
         Medicine Order!</span></h1>
       <h3><span>
-        Buy Your Medicine From Us With Free Home Delivery Only In Sunamganj    .</span></h3>
+        Buy Your Medicine From Us <BR>
+        With Free Home Delivery Only In Sunamganj    .</span></h3>
       
       <a class="btn" href="product.html">shop now</a>
     </div>
